# email_assistant

./: .gitignore  README.md  langgraph.json  pyproject.toml
src/: main.py  prompts.py  schemas.py  utils.py
src/tools/: base_tools.py  gmail_tools.py  schemas.py
src/tools/gmail/: run_ingest.py  setup_gmail.py
