[project]
name = "email-agent"
version = "0.1.0"
description = "AI Assistant for Email"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-api-python-client>=2.176.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "html2text>=2025.4.15",
    "isort>=6.0.1",
    "langchain>=0.3.26",
    "langgraph>=0.5.2",
    "langgraph-cli[inmem]>=0.3.4",
    "pip>=25.1.1",
    "python-dateutil>=2.9.0.post0",
    "langchain-openai>=0.1.1",
    "langgraph-api>=0.2.86",
]
